# Kumquat

./: CMakeLists.txt  README.md
include/: kumquat.h
src/: kqt_generateFramebuffer.c  kqt_generateSceneHandle.c  kqt_initialize.c  kqt_loadTexture.c  kqt_renderFramebuffer.c  kqt_sanityCheck.c  kqt_setiChannel.c  kumquat_util.c
